force-app/main/default/objects/Song__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Hip Hop</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Rhythm and Blues</fullName>
            </value>
            <value>
                <fullName>Soul</fullName>
            </value>
            <value>
                <fullName>Reggae</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Folk</fullName>
            </value>
            <value>
                <fullName>Funk</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Jazz</fullName>
            </value>
            <value>
                <fullName>Disco</fullName>
            </value>
            <value>
                <fullName>Classical</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Music of Latin America</fullName>
            </value>
            <value>
                <fullName>Music of Africa</fullName>
            </value>
            <value>
                <fullName>Music of Asia</fullName>
            </value>
            <value>
                <fullName>Traditional Music</fullName>
            </value>
            <value>
                <fullName>Independent Music</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>