force-app/main/default/objects/Song__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>