force-app/main/default/objects/Song__c/validationRules/TrackCountNeverExceedsTrackLicenses.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackCountNeverExceedsTrackLicenses</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Track_Count__c)),
  NOT(ISBLANK(Track_Licenses__c)),
  Track_Count__c &gt; Track_Licenses__c
)</errorConditionFormula>
    <errorMessage>Track Count cannot exceed the number of Track Licenses</errorMessage>
</ValidationRule>